<resources>
    <string name="app_name">ParentApp</string>

    <string name="format_time">%1$02d:%2$02d:%3$02d</string>

    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="reset">Reset</string>

    <string name="no_configured_children">No configured children!</string>
    <string name="override_current_empty">Current child queue is overridden to be empty!</string>
    <string name="current_setting">Current Settings: %1$d Row x %2$d Column, %3$d Total Virus</string>
    <string name="player_turn">It\'s %1$s\'s turn!\nPick a side.</string>

    <string name="flip_coin">Flip coin</string>
    <string name="timeout_timer">Timeout Timer</string>
    <string name="settings">Settings</string>
    <string name="game_result">Game result</string>
    <string name="time">Time</string>
    <string name="image_of_coins">Image of coins</string>
    <string name="show_who_s_picking">Show who\'s picking</string>
    <string name="heads">Heads</string>
    <string name="tails">Tails</string>
    <string name="result">Result</string>
    <string name="history">History</string>
    <string name="image_of_coins_FlipCoinActivity">Image of coins</string>
    <string name="confirm_delete_child">Are you sure you want to delete \"%1$s\" from the list?</string>
    <string name="yes_delete_child">Yes</string>
    <string name="no_delete_child">No</string>
    <string name="empty_value">Name Field is empty! Please fill it up before editing your child\'s name.</string>
    <string name="OK">OK</string>
    <string name="yes_edit_child">Yes</string>
    <string name="no_edit_child">No</string>
    <string name="confirm_add_child">Are you sure you want to add \"%1$s\" to the list?</string>
    <string name="yes_add_child">Yes</string>
    <string name="no_add_child">No</string>
    <string name="confirm_edit_child">Are you sure you want to edit \"%1$s\" to \"%2$s\"?</string>

    <string name="player_choice">%1$s chose %2$s </string>

    <string name="win_text">Result: %1$s\nCongratulations! You won.</string>
    <string name="lose_text">Result: %1$s\nToo bad! You lost.</string>
    <string name="result_flipCoin">result of flipCoin</string>
    <string name="main_menu">Main Menu</string>
    <string name="title_activity_main2">MainActivity2</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_child_name">New child name</string>
    <string name="edit_child">Edit Child</string>
    <string name="edit_child_name">Edit child name</string>
    <string name="delete_child">Delete Child</string>
    <string name="hours">hours</string>
    <string name="min">min</string>
    <string name="sec">sec</string>
    <string name="add_child">Add Child</string>

    <string name="title_activity_whose_turn">Whose Turn</string>
    <string name="create_new_task">Create new Task</string>
    <string name="done_button_text">Done</string>
    <string name="tasks_button">Tasks</string>
    <string name="confirm_add_task">Are you sure you want to add \"%1$s\" to the list?</string>
    <string name="confirm_edit_task">Are you sure you want to change the task name to \"%1$s\"?</string>
    <string name="yes_add_task">Yes</string>
    <string name="no_add_task">No</string>
    <string name="back_without_done">Your task has not saved! Do you want to exit without adding any new task?</string>
    <string name="back_edit_task_without_done">Are you sure you want to exit? All your unsaved changes will be discarded!</string>
    <string name="back_without_value">Do you want to exit with out adding any new task?</string>
    <string name="no_edit_task_exit">Name field cannot be empty</string>
    <string name="no_new_task_exit">Name field can not be empty! Do you want to exit without adding any new task?</string>
    <string name="back_edit_task_without_value">Name field can not be empty! Do you want to exit without editing the task name?</string>
    <string name="cancel">Done</string>
    <string name="task_complete">Task Complete</string>
    <string name="title_activity_config">configActivity</string>
    <string name="save">save</string>
    <string name="save_button">Save button</string>
    <string name="add_your_child_name_here">Add your child name here</string>
    <string name="add_a_child">Add a child</string>
    <string name="delete_button">Delete button</string>
    <string name="change_your_child_name_here">Change your child name here</string>
    <string name="portrait_description">Portrait</string>
    <string name="name_example">Name: Sarah</string>
    <string name="backPressedWarning">Are you sure you want to exit? All changes unsaved will be discarded.</string>
    <string name="add_more_child">Add more child</string>
    <string name="queue">QUEUE</string>
    <string name="format_name">Name: %1$s</string>
    <string name="format_picker">Picker: %1$s</string>
    <string name="format_result">Result: %1$s</string>
    <string name="timer_background"><a href="https://www.pinterest.ca/pin/560698222327909591/?d=t&amp;mt=login"> Timer Background</a></string>
    <string name="delete_icon"><a href="https://www.flaticon.com/premium-icon/trash_3102186?term=trash&amp;page=1&amp;position=20&amp;page=1&amp;position=20&amp;related_id=3102186&amp;origin=search">Delete icon</a></string>
    <string name="main_menu_background"><a href="https://stock.adobe.com/225471530?as_campaign=TinEye&amp;as_content=tineye_match&amp;epi1=225471530&amp;tduid=0bd245f8741b1b982ad71a5670df635e&amp;as_channel=affiliate&amp;as_campclass=redirect&amp;as_source=arvato">Main Menu Image</a></string>
    <string name="alarm_sound_link"><a href="https://mixkit.co/free-sound-effects/alarm/"> Alarm sound</a></string>
    <string name="tick_icon_link"><a href="https://www.clipartmax.com/middle/m2i8m2Z5G6i8H7b1_check-mark-computer-icons-clip-art-green-checkmark-icon-png/"> Tick icon</a></string>
    <string name="x_icon_link"><a href="https://www.clipartmax.com/middle/m2H7H7A0m2Z5N4H7_x-mark-cross-computer-icons-clip-art-red-cross-icon/"> X icon</a></string>
    <string name="flipcoin_background_link"><a href="https://wallpaperaccess.com/amazing-wood#google_vignette"> Flip Coin Background</a></string>
    <string name="save_icon_link"><a href="https://flyclipart.com/download-png#disk-diskette-floppy-floppy-disk-guardar-preserve-save-icon-769235.png"> Save icon</a></string>
    <string name="image_picker_link"><a href="https://github.com/Dhaval2404/ImagePicker"> Image Picker API</a></string>
    <string name="default_avatar_link"><a href="https://www.seekpng.com/idown/u2q8r5t4i1y3w7e6_existing-user-default-avatar/">Default Avatar</a></string>
    <string name="breath_button_link"><a href="https://www.pngaaa.com/detail/1843470">Breath Button</a></string>
    <string name="breath_music_link"><a href="https://pixabay.com/music/solo-piano-piano-moment-9835/">Breath Music</a></string>
    <string name="edit_task_toolbar_title">Edit Task</string>
    <string name="edit_task_name">Task Name</string>
    <string name="edit_text_child_name">Child Name</string>
    <string name="child_name">Child Name</string>
    <string name="help_screen">Help Screen</string>
    <string name="task_name">Task Name</string>
    <string name="timer_speed">Timer speed: %1$.2fx</string>
    <string name="breath_in">In</string>
    <string name="breath_out">Out</string>
    <string name="breath_good_job">Good job!</string>
    <string name="breath_start">Start</string>
    <string name="breath_begin">Begin</string>
    <string name="take_num_breath"> Let\'s take %1$d breaths together</string>

    <string name="task_history_child_portrait">Child Portrait</string>
    <string name="task_history_child_name">Child Name</string>
    <string name="task_history_last_turn_date">Date</string>
    <string name="task_history_deleted_child">A deleted child</string>
    <string name="edit_task_activity_title">Modify Task</string>
    <string name="are_you_sure_you_want_to_delete_the_task">Are you sure you want to delete the task?</string>
    <string name="task_history_child_name_header_string">Name</string>
    <string name="task_history_date_header_string">Date</string>
    <string name="task_history_child_portrait_string">Child Portrait</string>
    <string name="task_history_empty_text_string">No one has completed the task yet</string>

</resources>