<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/timerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/timer_background">


    <ProgressBar
        android:id="@+id/timer_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="230dp"
        android:layout_height="223dp"
        android:indeterminateOnly="false"
        android:progressDrawable="@drawable/circular_tmer_progress_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.244" />

    <TextView
        android:id="@+id/timer_progress_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="@+id/timer_bar"
        app:layout_constraintEnd_toEndOf="@+id/timer_bar"
        app:layout_constraintStart_toStartOf="@+id/timer_bar"
        app:layout_constraintTop_toTopOf="@+id/timer_bar" />

    <NumberPicker
        android:id="@+id/timer_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/timer_bar"
        app:layout_constraintEnd_toStartOf="@+id/text_second"
        app:layout_constraintStart_toEndOf="@+id/text_minute"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/timer_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/timer_bar"
        app:layout_constraintEnd_toStartOf="@+id/text_minute"
        app:layout_constraintStart_toEndOf="@+id/text_hour"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/timer_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="128dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="@+id/timer_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/hours"
        app:layout_constraintBottom_toBottomOf="@+id/timer_hour"
        app:layout_constraintEnd_toStartOf="@+id/timer_minute"
        app:layout_constraintStart_toEndOf="@+id/timer_hour"
        app:layout_constraintTop_toTopOf="@+id/timer_hour"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/text_minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/min"
        app:layout_constraintBottom_toBottomOf="@+id/timer_minute"
        app:layout_constraintStart_toEndOf="@+id/timer_minute"
        app:layout_constraintTop_toTopOf="@+id/timer_minute"
        app:layout_constraintVertical_bias="0.48" />

    <TextView
        android:id="@+id/text_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="67dp"
        android:text="@string/sec"
        app:layout_constraintBottom_toBottomOf="@+id/timer_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/timer_second"
        app:layout_constraintTop_toTopOf="@+id/timer_second"
        app:layout_constraintVertical_bias="0.48" />

    <android.widget.Button
        android:id="@+id/timer_pause_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_rounded_corner"
        android:text="@string/pause"
        app:layout_constraintEnd_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <android.widget.Button
        android:id="@+id/timer_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:background="@drawable/button_rounded_corner"
        android:text="@string/reset"
        app:layout_constraintStart_toStartOf="@+id/guideline13"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <android.widget.Button
        android:id="@+id/timer_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_rounded_corner"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline13"
        app:layout_constraintStart_toStartOf="@+id/guideline12"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <TableLayout
        android:id="@+id/default_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:stretchColumns="*"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timer_bar">

    </TableLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/timer_speed_text"
        android:layout_width="107dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="11dp"
        android:text="@string/timer_speed"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>